--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <li class="dropdown">
                             <a href="#" class="drop-list">Enterprise</a>
                             <ul class="dropdown-content">
-                                <li class="drop-list"><a href="#">Payment Solution</a></li>
+                                <li><a href="#">Payment Solution</a></li>
                                 <li class="dropdown-content">
                                     <li><a href="#">Accept Online Solutions</a></li>
                                     <li><a href="#">Payout & Transfers</a></li>
