--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <header>
         <nav class="head">
             <div class="left">
-                <img src="flutterwave.Assests/ng.svg" class="logo" alt="logo">
+                <img src="flutterwave.Assests/ng.svg">
                     <ul class="links">
                         <li class="dropdown">
                             <a href="#" class="drop-list">Enterprise</a>
                             <ul class="dropdown-content">
                                 <li><a href="#">Payment Solution</a></li>
-                                <li class="dropdown-content">
+                                <li class="dropdown">
+                                <a href="#" class="dropdown-list">
+                                    <ul class="dropdown-content">
                                     <li><a href="#">Accept Online Solutions</a></li>
                                     <li><a href="#">Payout & Transfers</a></li>
                                     <li><a href="#">Pos System</a></li>
