--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                             <a href="#" class="drop-list">Enterprise</a>
                             <ul class="dropdown-content">
                                 <li><a href="#">Payment Solution</a></li>
-                                <li class="dropdown">
+                                <ul class="dropdown">
                                 <a href="#" class="dropdown-list">
                                     <ul class="dropdown-content">
                                     <li><a href="#">Accept Online Solutions</a></li>
