--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
                                     <li><a href="#">Pos System</a></li>
                                     <li><a href="#">Checkout Demo</a></li>
                                 </li>
-                                <li><a href="#">Grow your business</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="drop-list">Grow your Business</a>
+                                <ul class="dropdown-content">
+                                    <li><a href="#">Payment Solution</a></li>
+                                    <ul class="dropdown">
+                                    <a href="#" class="dropdown-list">
+                                        <ul class="dropdown-content">
+                                        <li><a href="#">Create your own fintech</a></li>
+                                        <p>Easily build your fintech startup or embedd any financial services into any products.</p>
+                                        <li><a href="#">Card Issuing</a></li>
+                                        <li><a href="#">Access Capital</a></li>
+                                        <li><a href="#">Afritickets</a></li>
                             </ul>
                         </li>
                     </div>
