--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="left">
                 <img src="flutterwave.Assests/ng.svg">
                     <ul class="links">
-                        <li class="dropdown">
+                        <ul class="dropdown">
                             <a href="#" class="drop-list">Enterprise</a>
                             <ul class="dropdown-content">
                                 <li><a href="#">Payment Solution</a></li>
@@ -23,11 +23,10 @@
                                     <li><a href="#">Payout & Transfers</a></li>
                                     <li><a href="#">Pos System</a></li>
                                     <li><a href="#">Checkout Demo</a></li>
-                                </li>
+                                    </ul>
                             <li class="dropdown">
                                 <a href="#" class="drop-list">Grow your Business</a>
                                 <ul class="dropdown-content">
-                                    <li><a href="#">Payment Solution</a></li>
                                     <ul class="dropdown">
                                     <a href="#" class="dropdown-list">
                                         <ul class="dropdown-content">
