--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
                                 <a href="#" class="dropdown-list">
                                     <ul class="dropdown-content">
                                     <li><a href="#">Accept Online Solutions</a></li>
+                                    <p>Easily receive online payments from around the world in different currencies.</p>
                                     <li><a href="#">Payout & Transfers</a></li>
+                                    <p>Experience effortless cross-border payouts and transfers in various currencies worldwide.</p>
                                     <li><a href="#">Pos System</a></li>
+                                    <p>Point of sale devices with multiple payments methods to grow your physical business.</p>
                                     <li><a href="#">Checkout Demo</a></li>
+                                    <p>Experience Checkout yourself!</p>
                                     </ul>
                             <li class="dropdown">
                                 <a href="#" class="drop-list">Grow your Business</a>
