--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="head">
             <div class="left">
-                <img src="flutterwave.Assests/ng.svg">
+                <img src="flutterwave.Assests/logo.svg">
                     <ul class="links">
                         <ul class="dropdown">
                             <a href="#" class="drop-list">Enterprise</a>
